--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,15 @@
 {
     "name": "laravelia/mii",
-    "description": "test php application",
     "type": "project",
+    "description": "The MII Framework.",
+    "keywords": [
+        "framework",
+        "mii"
+    ],
+    "license": "MIT",
     "require-dev": {
         "symfony/var-dumper": "7.0.x-dev"
     },
-    "license": "MIT",
     "autoload": {
         "psr-4": {
             "App\\": "app/"
