--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "illuminate/database": "^11.0@dev",
         "illuminate/events": "^11.0@dev",
         "spatie/ignition": "^1.11",
-        "illuminate/collections": "^11.0@dev"
+        "illuminate/collections": "^11.0@dev",
+        "monolog/monolog": "^3.0@dev"
     }
 }
