migration support added

--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "illuminate/events": "^11.0@dev",
         "spatie/ignition": "^1.11",
         "illuminate/collections": "^11.0@dev",
-        "monolog/monolog": "^3.0@dev"
+        "monolog/monolog": "^3.0@dev",
+        "robmorgan/phinx": "0.x-dev"
     }
 }
