--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
+APP_NAME="MII"
+APP_ENV=local
+APP_DEBUG=true
+APP_URL=http://localhost:8000
+
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
