--- a/composer.json
+++ b/composer.json
@@ -8,14 +8,15 @@
     ],
     "license": "MIT",
     "require-dev": {
-        "symfony/var-dumper": "7.0.x-dev"
+        "symfony/var-dumper": "7.0"
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Mii\\": "mii/"
         },
         "files": [
-            "app/Core/Helpers/helpers.php"
+            "mii/Helpers/helpers.php"
         ]
     },
     "authors": [
@@ -23,16 +24,17 @@
             "name": "mahedi hasan"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require": {
-        "psr/container": "^2.0@dev",
-        "vlucas/phpdotenv": "^5.5@dev",
-        "illuminate/database": "^11.0@dev",
-        "illuminate/events": "^11.0@dev",
+        "php": "^8.3",
+        "psr/container": "^2.0",
+        "vlucas/phpdotenv": "^5.5",
+        "illuminate/database": "^11.0",
+        "illuminate/events": "^11.0",
         "spatie/ignition": "^1.11",
-        "illuminate/collections": "^11.0@dev",
-        "monolog/monolog": "^3.0@dev",
+        "illuminate/collections": "^11.0",
+        "monolog/monolog": "^3.0",
         "robmorgan/phinx": "0.x-dev",
-        "fakerphp/faker": "2.0.x-dev"
+        "fakerphp/faker": "^1.23"
     }
 }
