--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "laravelia/mii",
+    "name": "mii/mii",
     "type": "project",
     "description": "The MII Framework.",
     "keywords": [
@@ -7,9 +7,6 @@
         "mii"
     ],
     "license": "MIT",
-    "require-dev": {
-        "symfony/var-dumper": "7.0"
-    },
     "autoload": {
         "psr-4": {
             "App\\": "app/",
@@ -34,7 +31,8 @@
         "spatie/ignition": "^1.11",
         "illuminate/collections": "^11.0",
         "monolog/monolog": "^3.0",
-        "robmorgan/phinx": "0.x-dev",
-        "fakerphp/faker": "^1.23"
+        "fakerphp/faker": "^1.23",
+        "symfony/var-dumper": "^7.1",
+        "robmorgan/phinx": "^0.16.1"
     }
 }
