--- a/composer.json
+++ b/composer.json
@@ -1,38 +1,45 @@
 {
-    "name": "mii/mii",
-    "type": "project",
-    "description": "The MII Framework.",
-    "keywords": [
-        "framework",
-        "mii"
-    ],
-    "license": "MIT",
-    "autoload": {
-        "psr-4": {
-            "App\\": "app/",
-            "Mii\\": "mii/"
-        },
-        "files": [
-            "mii/Helpers/helpers.php"
-        ]
+  "name": "mii/mii",
+  "type": "project",
+  "description": "The MII Framework.",
+  "keywords": [
+    "framework",
+    "mii"
+  ],
+  "license": "MIT",
+  "autoload": {
+    "psr-4": {
+      "App\\": "app/",
+      "Mii\\": "mii/"
     },
-    "authors": [
-        {
-            "name": "mahedi hasan"
-        }
-    ],
-    "minimum-stability": "stable",
-    "require": {
-        "php": "^8.3",
-        "psr/container": "^2.0",
-        "vlucas/phpdotenv": "^5.5",
-        "illuminate/database": "^11.0",
-        "illuminate/events": "^11.0",
-        "spatie/ignition": "^1.11",
-        "illuminate/collections": "^11.0",
-        "monolog/monolog": "^3.0",
-        "fakerphp/faker": "^1.23",
-        "symfony/var-dumper": "^7.1",
-        "robmorgan/phinx": "^0.16.1"
+    "files": [
+      "mii/Helpers/helpers.php"
+    ]
+  },
+  "authors": [
+    {
+      "name": "mahedi hasan"
     }
+  ],
+  "minimum-stability": "stable",
+  "require": {
+    "php": "^8.3",
+    "psr/container": "^2.0",
+    "vlucas/phpdotenv": "^5.5",
+    "illuminate/database": "^11.0",
+    "illuminate/events": "^11.0",
+    "spatie/ignition": "^1.11",
+    "illuminate/collections": "^11.0",
+    "monolog/monolog": "^3.0",
+    "fakerphp/faker": "^1.23",
+    "symfony/var-dumper": "^7.1",
+    "robmorgan/phinx": "^0.16.1"
+  },
+  "scripts": {
+    "post-create-project-cmd": [
+      "MII\\Installer::postCreateProject"
+    ]
+  },
+  "minimum-stability": "stable",
+  "prefer-stable": true
 }
