--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
   "name": "mii/mii",
   "type": "project",
-  "description": "The MII Framework.",
+  "description": "The skeleton application for the MII framework.",
+  "license": "MIT",
   "keywords": [
     "framework",
     "mii"
   ],
-  "license": "MIT",
   "autoload": {
     "psr-4": {
       "App\\": "app/",
