--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
   ],
   "require": {
     "php": "^8.3",
-    "zuno/zuno": "^1.0.1"
+    "zuno/zuno": "^1.0.4"
   },
   "require-dev": {
     "fakerphp/faker": "^1.23"
@@ -23,6 +23,11 @@
   "autoload": {
     "psr-4": {
       "App\\": "app/"
+    }
+  },
+  "extra": {
+    "branch-alias": {
+      "dev-master": "1.x-dev"
     }
   },
   "minimum-stability": "stable",
