--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,9 @@ APP_ENV=local
 APP_DEBUG=true
 APP_URL=http://localhost:8000
 
+APP_TIMEZOME=UTC
+LOG_CHANNEL=stack
+
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
