--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
   ],
   "require": {
     "php": "^8.3",
-    "zuno/zuno": "^3.2"
+    "zuno/zuno": "^3.4",
+    "symfony/console": "^7.2"
   },
   "require-dev": {
     "fakerphp/faker": "^1.23"
