--- a/config.example
+++ b/config.example
@@ -5,22 +5,16 @@ return [
         'migrations' => './database/migrations',
         'seeds' => './database/seeds',
     ],
-
-    // Base class for migrations
-    'migration_base_class' => 'Zuno\Migration\Migration',
-
+    'migration_base_class' => Zuno\Migration\Migration::class,
     'environments' => [
-        // Default table to track migrations
-        'default_migration_table' => 'phinxlog',
-
-        // Configuration for the 'Zuno' environment
-        'Zuno' => [
-            'adapter' => 'mysql',  // Database adapter type
-            'host' => 'localhost',  // Database host
-            'name' =>  // Database name
-            'user' =>  // Database user
-            'pass' =>  // Database password
-            'port' => '3306' // Database port
+        'default_migration_table' => 'migratio',
+        'zuno' => [
+            'adapter' => 'mysql',
+            'host' => 'localhost',
+            'name' => '',
+            'user' => '',
+            'pass' => '',
+            'port' => ''
         ]
     ]
 ];
