--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,18 @@
 APP_NAME="Zuno"
+APP_KEY=base64:+cVvutS1oVZxZUZeVGVS4evpiF6M7VaKAjEkiZi7lIM=
 APP_ENV=local
 APP_DEBUG=true
-APP_URL=http://localhost:8000
+APP_URL=http://localhost:
 
-APP_TIMEZOME=UTC
+APP_LOCALE=en
 LOG_CHANNEL=stack
+FILESYSTEM_DISK=local
+BCRYPT_ROUNDS=10
+
+SESSION_DRIVER=file
+SESSION_LIFETIME=120
+SESSION_PATH=/
+SESSION_DOMAIN=
 
 DB_CONNECTION=mysql
 DB_HOST=localhost
