--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME="Zuno"
 APP_KEY=base64:+cVvutS1oVZxZUZeVGVS4evpiF6M7VaKAjEkiZi7lIM=
 APP_ENV=local
 APP_DEBUG=true
-APP_URL=http://localhost:
+APP_URL=http://localhost:8000
 
 APP_LOCALE=en
 LOG_CHANNEL=stack
@@ -17,6 +17,15 @@ SESSION_DOMAIN=
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=
+DB_DATABASE=zuno
 DB_USERNAME=
 DB_PASSWORD=
+
+MAIL_MAILER=smtp
+MAIL_HOST=sandbox.smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_FROM_NAME="${APP_NAME}"
