--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
 APP_NAME="Zuno"
-APP_KEY=base64:+cVvutS1oVZxZUZeVGVS4evpiF6M7VaKAjEkiZi7lIM=
+APP_KEY=base64:uSDsYGX9AXF64pyiLs6xvzN0cwQiGIbH+4VN2FL2su4=
 APP_ENV=local
 APP_DEBUG=true
 APP_URL=http://localhost:8000
+APP_BASE_PATH=
+
+APP_RUNNING_IN_CONSOLE=false
 
 APP_LOCALE=en
 LOG_CHANNEL=stack
