--- a/.env.example
+++ b/.env.example
@@ -32,3 +32,7 @@ MAIL_PASSWORD=
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
+
+LOG_CHANNEL=stack
+SLACK_WEBHOOK_URL=
+LOG_LEVEL=debug
