--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,21 @@
 APP_NAME="Zuno"
-APP_KEY=base64:uSDsYGX9AXF64pyiLs6xvzN0cwQiGIbH+4VN2FL2su4=
+APP_KEY=base64:Sv4ZGoeQP/x3D0M2hakeOWEkn6figsSzxl/XvduN0yw=
 APP_ENV=local
 APP_DEBUG=true
 APP_URL=http://localhost:8000
 APP_BASE_PATH=
 
 APP_RUNNING_IN_CONSOLE=false
+APP_ROUTE_CACHE=true
 
 APP_LOCALE=en
+APP_FALLBACK_LOCALE=en
 LOG_CHANNEL=stack
 FILESYSTEM_DISK=local
 BCRYPT_ROUNDS=10
 
 SESSION_DRIVER=file
-SESSION_LIFETIME=120
+SESSION_LIFETIME=1
 SESSION_PATH=/
 SESSION_DOMAIN=
 
