--- a/composer.json
+++ b/composer.json
@@ -1,44 +1,48 @@
 {
-  "name": "zunoo/zunoo",
-  "type": "project",
-  "description": "The skeleton application for the Zunoo framework",
-  "license": "MIT",
-  "keywords": [
-    "framework",
-    "Zunoo"
-  ],
-  "authors": [
-    {
-      "name": "mahedi hasan",
-      "email": "mahedy150101@gmail.com"
-    }
-  ],
-  "require": {
-    "php": "^8.3",
-    "zuno/zuno": "^7.0"
-  },
-  "require-dev": {
-    "fakerphp/faker": "^1.23"
-  },
-  "autoload": {
-    "psr-4": {
-      "App\\": "app/"
-    }
-  },
-  "extra": {
-    "branch-alias": {
-      "dev-master": "6.x-dev"
-    }
-  },
-  "minimum-stability": "stable",
-  "prefer-stable": true,
-  "scripts": {
-    "post-create-project-cmd": [
-      "Zuno\\Installer::postCreateProject"
+    "name": "zunoo/zunoo",
+    "type": "project",
+    "description": "The skeleton application for the Zunoo framework",
+    "license": "MIT",
+    "keywords": [
+        "framework",
+        "Zunoo"
     ],
-    "post-root-package-install": [
-      "@php -r \"file_exists('.env') || copy('.env.example', '.env');\"",
-      "@php -r \"file_exists('config.php') || copy('config.example', 'config.php');\""
-    ]
-  }
+    "authors": [
+        {
+            "name": "mahedi hasan",
+            "email": "mahedy150101@gmail.com"
+        }
+    ],
+    "require": {
+        "php": "^8.3",
+        "zuno/zuno": "^7.1"
+    },
+    "require-dev": {
+        "fakerphp/faker": "^1.23"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "app/",
+            "Database\\Seeders\\": "database/seeders/"
+        }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "6.x-dev"
+        }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
+    "scripts": {
+        "post-create-project-cmd": [
+            "Zuno\\Installer::postCreateProject"
+        ],
+        "post-root-package-install": [
+            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\"",
+            "@php -r \"file_exists('config.php') || copy('config.example', 'config.php');\""
+        ],
+        "post-create-project-cmd": [
+            "@php pool key:generate --ansi"
+        ]
+    }
 }
